--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>CSS Flexbox Demo</title>
-<link rel="stylesheet" href="file:///C|/Users/Kyle_/OneDrive/Documents/GitHub/CSS-Flexbox-Demo/main.css">
+<link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://use.typekit.net/kjz7cqs.css">
+
 </head>
 
 <body>
+
 <div class="container">
-<header><img src="file:///C|/Users/Kyle_/OneDrive/Documents/GitHub/CSS-Flexbox-Demo/img/goyonder.png" alt="logo"></header>
+<header><img src="img/goyonder.png" alt="logo"></header>
     
 <nav>
 <ul class="navitems">
