--- a/TMP1t30yl7.htm
+++ b/TMP1t30yl7.htm
@@ -43,17 +43,17 @@
         <div class="flex-container">
             <div class="content-box">
                 <h1>This</h1>
-                <img src="/img/flowerthing.png" alt="flower" width="170" height="205">
+                <img src="img/flowerthing.png" alt="flower" width="170" height="205">
             </div>
         
             <div class="content-box">
                 <h1>Easy</h1>
-                <img src="/img/flowerthing.png" alt="flower" width="170" height="205">
+                <img src="img/flowerthing.png" alt="flower" width="170" height="205">
             </div>
         
             <div class="content-box">
                 <h1>Boxy</h1>
-                <img src="/img/flowerthing.png" alt="flower" width="170" height="205">
+                <img src="img/flowerthing.png" alt="flower" width="170" height="205">
             </div>
          </div>
     </section>
